--- a/text/ch1-intro.tex
+++ b/text/ch1-intro.tex
@@ -97,7 +97,7 @@ Applying Gauss' law to the surface detailed in figure \ref{fig:introplasmafreque
 \end{equation}
 at the electron surface. By the Lorentz force, the displaced electrons will experience a restoring force, $-eE\hat{\mathbf{x}}$, perpendicular to the surface due to the electron-ion charge imbalance. The equation of motion for electrons on that surface is therefore
 \begin{equation}\label{eq:intro_sho}
-	m_e\frac{\mathrm{d}^2\Delta x}{\mathrm{d}t^2} = -eE = -\frac{e^2n_e}{m_e \epsilon_0}\Delta x.
+	m_e\frac{\mathrm{d}^2\Delta x}{\mathrm{d}t^2} = -eE = -\frac{e^2n_e}{\epsilon_0}\Delta x.
 \end{equation}
 Equation \ref{eq:intro_sho} clearly describes a simple harmonic oscillator with a characteristic frequency given by the plasma frequency,
 \begin{equation}
